Added JS, Refined layout

--- a/_posts/2020-06-10-project-1.md
+++ b/_posts/2020-06-10-project-1.md
@@ -1,9 +1,9 @@
 ---
 
 layout: project
-title: "Week 1"
-
-type: digital
+week: 1
+title: "Intro, Research, Inspiration"
+type: I explore some of my inspirations to find out how they use data and what makes them compelling.
 
 featured-image: kiwiThumbailTest.png
 featured-image-alt: alternateeee
