Added first post

--- a/_posts/2020-06-02-project-6.md
+++ b/_posts/2020-06-02-project-6.md
@@ -1,8 +1,10 @@
 ---
 
 layout: project
-title: "Project 6"
-featured-image: bt21.jpeg
+week: 6
+written-date: TBA
+title: "Build: Poster, Video Abstract & Presentation Process"
+featured-image: 
 featured-image-alt: alternateeee
 
 ---
