--- a/_posts/2020-06-07-project-4.md
+++ b/_posts/2020-06-07-project-4.md
@@ -1,8 +1,10 @@
 ---
 
 layout: project
-title: "Project 4"
-featured-image: bt21.jpeg
+week: 4
+written-date: TBA
+title: "Prototype: Testing & Workshops"
+featured-image: 
 featured-image-alt: alternateeee
 
 ---
