--- a/_posts/2020-06-09-project-2.md
+++ b/_posts/2020-06-09-project-2.md
@@ -1,8 +1,10 @@
 ---
 
 layout: project
-title: "Project 2"
-featured-image: bt21.jpeg
+week: 2
+written-date: February 14, 2021
+title: "Research: Context & Audience"
+featured-image: 
 featured-image-alt: alternateeee
 
 ---
