--- a/_posts/2021-02-02-project-1.md
+++ b/_posts/2021-02-02-project-1.md
@@ -3,28 +3,27 @@
 layout: project
 week: 1
 written-date: February 2, 2021
-title: "Intro, Research, Inspiration"
+title: "Intro: Research & Inspiration"
 subhead: I explore some of my inspirations to find out how they use data and what makes them compelling.
 
-featured-image: kiwiThumbailTest.png
-featured-image-alt: alternateeee
-splash-image: kiwiThumbailTest.png
+featured-image: Week1_featImg.jpg
+featured-image-alt: A selection of inspirational data books and projects 
+splash-image: Week1_featImg.jpg
+featured-image-caption: "A selection of my inspirations. From left to right: Lily Xie's Charts, Michelle Rial's Am I Overthinking This?, Giorgia Lupi and Stefanie Posavec's Dear Data"
+
+list-item-1: Preliminary research
+list-item-2: One interview!
+list-item-3: Data exploration
+list-item-4: Process Website
 
 
-description-1: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus ipsum eros, et lacinia diam ultricies eget. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus commodo tempor libero quis dapibus. Nam pretium ipsum ac enim tincidunt tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam luctus nibh vel ultrices tincidunt. Suspendisse cursus enim ac enim rhoncus, ac eleifend odio maximus. Aliquam luctus purus quis mollis cursus. In rhoncus lobortis libero. Sed eleifend ante in urna auctor porta. Donec at lacinia turpis, vitae dignissim metus. Sed in libero bibendum, ultrices magna nec, varius tortor. Aliquam nec elementum est, eleifend sagittis risus. Aenean vel mi tellus. Nullam at neque ac arcu luctus aliquam. Mauris tempor quam egestas euismod dapibus.
-
-Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam ullamcorper dui dapibus lectus pharetra elementum. Morbi tempus leo sit amet neque lobortis, eu congue lorem pulvinar. Sed molestie consequat sem, sit amet cursus sem tincidunt condimentum. Nullam non mi leo. Vestibulum porttitor nulla a ultricies vehicula. Duis viverra euismod eros at elementum. Donec pulvinar, sapien quis porttitor finibus, risus tortor placerat nisi, ac congue arcu enim ut sapien.
-
-Proin aliquet dignissim nisl, quis condimentum magna consectetur eget. Aenean faucibus, lacus at tempor laoreet, lectus sapien imperdiet purus, sit amet consectetur arcu lectus ut tortor. Integer varius enim eget nisl tristique scelerisque. Praesent in fringilla metus, id pulvinar arcu. Nam nec interdum sem, non rutrum quam. Donec eu elementum urna. Mauris lacinia ligula at tellus blandit, at maximus eros iaculis. In vitae eros ante. Cras eu arcu accumsan, luctus sem lobortis, sollicitudin risus. Suspendisse varius viverra metus vel maximus. Fusce sed orci facilisis, ultrices justo nec, iaculis nisi. In facilisis lacus a tellus sagittis, ut volutpat enim consectetur. Quisque ac metus maximus, laoreet magna eget, facilisis magna.
-
-In eu vehicula lacus. Praesent sit amet mauris tempus enim viverra auctor ut et lectus. Donec lectus dui, volutpat non diam non, feugiat tincidunt augue. Aliquam vulputate magna sit amet urna blandit, eu tempus eros commodo. Nam sollicitudin in nulla et suscipit. Nunc lectus leo, volutpat in justo nec, tincidunt volutpat ex. Ut elit mi, maximus in posuere id, facilisis sollicitudin urna. Suspendisse potenti. Suspendisse ultricies ipsum ac iaculis luctus. Phasellus lobortis lorem eu dui imperdiet blandit. Nulla dui lectus, lobortis sit amet accumsan quis, laoreet eget augue.
-
-Integer bibendum, tortor vel fermentum auctor, est nulla tempor orci, id accumsan diam eros id urna. Etiam eget nulla eget urna hendrerit pharetra. Nulla sit amet pretium est. Proin molestie tortor mauris, ac bibendum nunc aliquet placerat. Duis pretium felis augue. Aliquam at lectus lorem. Nullam eu maximus mauris. Fusce iaculis eros eu dapibus facilisis. Quisque semper risus eget dui vulputate, id mollis diam porttitor. Proin accumsan elit in eros aliquet, a convallis tortor porta. Integer id pretium ligula, eu fermentum purus. In consectetur est leo, vel placerat sem pharetra non. Vestibulum dictum augue id erat eleifend, at viverra urna imperdiet.
-
-description 1 that does under the title"
-
-description-2: hi im description 2
 
 ---
 
-this is project one
+<p class="article-paragraph">Data doesn’t necessarily have to be a scary, intangible thing only the trained and specialized can touch and use. When we think of data, images of massive spreadsheets and complicated charts and graphs are inextricably linked. They may be used in a business, government, academic or organizational setting. There is a sense of formality in all these settings. That data is merely used in experienced, goal driven settings.</p>
+
+<p class="article-paragraph">But as I explore the work of Giorgia Lupi, Stephanie Posavec, Nathalie Miebach, the more I realize data can be used as a medium and can be allowed the openness of interpretation. In Giorgia Lupi’s <a href="https://medium.com/@giorgialupi/data-humanism-the-revolution-will-be-visualized-31486a30dbfb" target="_blank" rel="noopener noreferrer" class="inline-link">Data Humanism manifesto</a>, Lupi restructures our conventions towards data. (It is well worth the read!) She advocates for data thinking grounded in the personal, the small data and complexities of stories.</p>
+
+<q class="article-quote"> We are ready to question the impersonality of a merely technical approach to data, and to begin designing ways to connect numbers to what they really stand for: knowledge, behaviors, people.</q>
+
+<p class="article-paragraph">With this in mind, I begin my exploration into data.</p>
