--- a/_posts/2020-06-06-project-5.md
+++ b/_posts/2020-06-06-project-5.md
@@ -1,8 +1,10 @@
 ---
 
 layout: project
-title: "Project 5"
-featured-image: bt21.jpeg
+week: 5
+written-date: TBA
+title: "Build: Based on Researching and Testing" 
+featured-image: 
 featured-image-alt: alternateeee
 
 ---
