--- a/_posts/2020-06-08-project-3.md
+++ b/_posts/2020-06-08-project-3.md
@@ -1,8 +1,10 @@
 ---
 
 layout: project
-title: "Project 3"
-featured-image: bt21.jpeg
+week: 3
+written-date: TBA
+title: "Prototype: Interviews & Form"
+featured-image: 
 featured-image-alt: alternateeee
 
 ---
