--- a/_posts/2021-02-02-project-1.md
+++ b/_posts/2021-02-02-project-1.md
@@ -11,6 +11,7 @@ featured-image-alt: A selection of inspirational data books and projects
 splash-image: Week1_featImg.jpg
 featured-image-caption: "A selection of my inspirations. From left to right: Lily Xie's Charts, Michelle Rial's Am I Overthinking This?, Giorgia Lupi and Stefanie Posavec's Dear Data"
 
+summary: 
 list-item-1: Preliminary research
 list-item-2: One interview!
 list-item-3: Data exploration
@@ -25,5 +26,7 @@ list-item-4: Process Website
 <p class="article-paragraph">But as I explore the work of Giorgia Lupi, Stephanie Posavec, Nathalie Miebach, the more I realize data can be used as a medium and can be allowed the openness of interpretation. In Giorgia Lupi’s <a href="https://medium.com/@giorgialupi/data-humanism-the-revolution-will-be-visualized-31486a30dbfb" target="_blank" rel="noopener noreferrer" class="inline-link">Data Humanism manifesto</a>, Lupi restructures our conventions towards data. (It is well worth the read!) She advocates for data thinking grounded in the personal, the small data and complexities of stories.</p>
 
 <q class="article-quote"> We are ready to question the impersonality of a merely technical approach to data, and to begin designing ways to connect numbers to what they really stand for: knowledge, behaviors, people.</q>
+
+<br>
 
 <p class="article-paragraph">With this in mind, I begin my exploration into data.</p>
