--- a/_posts/2020-06-09-project-2.md
+++ b/_posts/2020-06-09-project-2.md
@@ -2,11 +2,20 @@
 
 layout: project
 week: 2
-written-date: February 14, 2021
+written-date: February 16, 2021
 title: "Research: Context & Audience"
 featured-image: 
 featured-image-alt: alternateeee
 
 ---
 
-this is project two
+This week after meeting with Fish and looking back at my inspirations, I realized the direction I wanted to go into was <b>as much about self-discovery as it was about creating connections between people </b> using those discoveries. 
+
+<br> 
+
+In addition, Mayuri Saxena who talked to me about her project, Friendshipments, gave me advice to first observe myself. 
+I took time to look into it and surfaced what mattered to me the most. I revised my statement and researchable question to be reflective of my new goals.
+
+
+<h3>Revised Statement</h3>
+
