Added phase 2 research

--- a/_posts/2020-06-07-project-4.md
+++ b/_posts/2020-06-07-project-4.md
@@ -2,10 +2,14 @@
 
 layout: project
 week: 4
-written-date: TBA
+written-date: March 16, 2021
 title: "Prototype: Testing & Workshops"
-featured-image: 
+featured-image: Week4_featImg.jpg
 featured-image-alt: alternateeee
+
+splash-image: Week4_featImg.jpg
+featured-image-caption:
+
 
 ---
 
