--- a/_posts/2020-06-08-project-3.md
+++ b/_posts/2020-06-08-project-3.md
@@ -4,8 +4,14 @@ layout: project
 week: 3
 written-date: TBA
 title: "Prototype: Interviews & Form"
-featured-image: 
-featured-image-alt: alternateeee
+featured-image: Week3_featImg.jpg
+featured-image-alt: Screenshots of my survey is overlayed with a dot grid and textured gradient.
+
+subhead: Conducting a survey and one-on-one interviews gave me great insights and direction for my project.
+
+splash-image: Week3_featImg.jpg
+featured-image-caption: ""
+
 
 ---
 
