--- a/_posts/2020-06-09-project-2.md
+++ b/_posts/2020-06-09-project-2.md
@@ -4,12 +4,23 @@ layout: project
 week: 2
 written-date: February 16, 2021
 title: "Research: Context & Audience"
-featured-image: 
-featured-image-alt: alternateeee
+featured-image: Week2_featImg.jpg
+featured-image-alt: "A collection of images connect with dots and lines"
+
+subhead: I hone in on my goals and audience for the project by analyzing my inspirations and personal experience.
+
+splash-image: Week2_featImg.jpg
+featured-image-caption: "Images from the pandemic overlayed with visuals from my research work"
+
 
 ---
 
-This week after meeting with Fish and looking back at my inspirations, I realized the direction I wanted to go into was <b>as much about self-discovery as it was about creating connections between people </b> using those discoveries. 
+After meeting with my advisor, Fish, and looking back at my inspirations, I realized the direction I wanted to go into was <b>as much about self-discovery as it was about creating connections between people</b> using those discoveries.
+
+<br>
+
+In addition, Mayuri Saxena who talked to me about her project, Friendshipments, gave me advice to first observe myself. I took time to look into it and surfaced what mattered to me the most. I revised my statement and researchable question to be reflective of my new goals.
+
 
 <br> 
 
@@ -19,3 +30,14 @@ I took time to look into it and surfaced what mattered to me the most. I revised
 
 <h3>Revised Statement</h3>
 
+My researchable question pivoted from:
+
+<div class="side-by-side-change">
+<p class="side-by-side-change-component">
+    How can our own data from day to day experiences be used to encourage self discovery and explore the multiplicity of our narratives?</p>
+
+<p class="side-by-side-change-component"><i>to</i></p>
+
+<p class="side-by-side-change-component">How can data encourage self discovery and connections with our inner circles when we are physically apart?</p>
+
+</div>
