--- a/_posts/2021-02-02-project-1.md
+++ b/_posts/2021-02-02-project-1.md
@@ -25,8 +25,22 @@ list-item-4: Process Website
 
 <p class="article-paragraph">But as I explore the work of Giorgia Lupi, Stephanie Posavec, Nathalie Miebach, the more I realize data can be used as a medium and can be allowed the openness of interpretation. In Giorgia Lupi’s <a href="https://medium.com/@giorgialupi/data-humanism-the-revolution-will-be-visualized-31486a30dbfb" target="_blank" rel="noopener noreferrer" class="inline-link">Data Humanism manifesto</a>, Lupi restructures our conventions towards data. (It is well worth the read!) She advocates for data thinking grounded in the personal, the small data and complexities of stories.</p>
 
-<q class="article-quote"> We are ready to question the impersonality of a merely technical approach to data, and to begin designing ways to connect numbers to what they really stand for: knowledge, behaviors, people.</q>
+<q class="article-quote">We are ready to question the impersonality of a merely technical approach to data, and to begin designing ways to connect numbers to what they really stand for: knowledge, behaviors, people.</q>
 
 <br>
 
 <p class="article-paragraph">With this in mind, I begin my exploration into data.</p>
+
+<h3>My Working Definition of Data</h3>
+<p>Here is my working definition of data, based on Merriam Webster, how it is used in data science and my own experience working with data:</p>
+<br>
+<p><b>da · ta</b> noun, singular or plural in usage</p>
+    
+<ol>
+    <li>Piece(s) of information that can take many forms (qualitative, quantitative, descriptive, etc)</li>
+    <li>Collected using a defined methodology</li>
+    <li>Can be collected repeatedly to make a dataset (for example, how many of Y are there at time X)</li>
+    <li>Representative of a larger reality or perspective</li>
+    <li>Can be used for analysis, calculation, discussion, planning</li>
+
+</ol>
