--- a/_posts/2020-06-08-project-3.md
+++ b/_posts/2020-06-08-project-3.md
@@ -2,7 +2,7 @@
 
 layout: project
 week: 3
-written-date: TBA
+written-date: March 9, 2021
 title: "Prototype: Interviews & Form"
 featured-image: Week3_featImg.jpg
 featured-image-alt: Screenshots of my survey is overlayed with a dot grid and textured gradient.
@@ -15,4 +15,10 @@ featured-image-caption: ""
 
 ---
 
-this is project 3
+To better understand my audience, I conducted a google form survey and one on one interviews. Below is my team map which shows an overview of people who have assisted me on my project. They are divided into 3 categories: audience, strategy and inspiration.
+
+![Team Map](/assets/images/Week3/TeamMap.png)
+
+<h3>Key Takeaways</h3>
+
+<h4>Survey</h4>
