--- a/_posts/2020-06-09-project-2.md
+++ b/_posts/2020-06-09-project-2.md
@@ -28,7 +28,7 @@ In addition, Mayuri Saxena who talked to me about her project, Friendshipments, 
 I took time to look into it and surfaced what mattered to me the most. I revised my statement and researchable question to be reflective of my new goals.
 
 
-<h3>Revised Statement</h3>
+<h3>Revised Question</h3>
 
 My researchable question pivoted from:
 
@@ -41,3 +41,26 @@ My researchable question pivoted from:
 <p class="side-by-side-change-component">How can data encourage self discovery and connections with our inner circles when we are physically apart?</p>
 
 </div>
+
+
+<h3>Audience</h3>
+
+Busy people who want to feel more connected with their friends and family
+
+<h3>Context</h3>
+
+Structured communal activity with an analog and
+digital component
+
+<br>
+
+Is there a way to set up structured activity or time where these connections can be strengthened? In this sense, I look to other ways people have connected during the pandemic or to distant people. People have employed a wide variety
+of communication: some more analog such as the humble letter to the digital with the rise of Zoom video calling.
+
+<br>
+
+For my approach, I plan to use a combination of the two—perhaps an analog activity to evoke the feeling of being physically present along with technology which will provide more instantaneous communication. I also want the flexibility of the activity to be asynchronous or synchronous to accommodate for different schedules.
+
+
+
+
