--- a/_posts/2020-06-08-project-3.md
+++ b/_posts/2020-06-08-project-3.md
@@ -17,8 +17,49 @@ featured-image-caption: ""
 
 To better understand my audience, I conducted a google form survey and one on one interviews. Below is my team map which shows an overview of people who have assisted me on my project. They are divided into 3 categories: audience, strategy and inspiration.
 
-![Team Map](/assets/images/Week3/TeamMap.png)
+<img src="{{ site.baseurl }}/assets/images/Week3/TeamMap.png" alt="" width=600px />
+<figcaption>Team Map</figcaption>
 
 <h3>Key Takeaways</h3>
 
-<h4>Survey</h4>
+<a href="https://forms.gle/vNVxygRdxbTbBrJn9" target="_blank" rel="noopener noreferrer"><img src="{{ site.baseurl }}/assets/images/Week3/survey.png" alt="" width=600px height=400px /></a>
+
+<figcaption>Google form survey on connections in isolation</figcaption>
+
+<h4>Connections in Isolation  Survey</h4>
+
+
+* My audience mostly communicate to each other digitally: text message, calling, video calling and social media (top 4 ways)
+* People tend to spend time together largely by gathering and having a meal.
+Weekday evenings are the most popular time for friends and family to spend time together.
+* A majority of people alot 2–4+hours towards spending time with others at one time.
+* During the pandemic, most people have sought out digital solutions to hanging out such as: video games, virtual game / movie nights and long phone calls. There are a few more in person ways people have done which include dropping things off at each other’s places.
+* People miss the mundane things they use to be able to do such as running to people in public, seeing each other’s smiles, and being able to eat out.
+
+<h4>One on One Audience Interviews</h4>
+* They are busy people with work, school or familial commitments.
+* Time and schedule differences prevent people from directly communicating. Their responses are often delayed and can become water-down when a long time has elapsed.
+* They use their phones as primary means of direct communication with their friends and family. They enjoy it for its ease and instantaneous response.
+* They care most about how their friends and family are doing (mental and physical wellbeing) and any life updates they may have.
+
+<h4>Fish McGill</h4>
+* It is also about the connections we create with others through the data.
+* We should aim for deep insights and accessibility.
+* Viewer needs effort and patience to decipher and take in the data. This act is akin to listening to someone.
+
+<h4>Mayuri Saxena</h4>
+* Start by observing yourself and your own data
+* Her own project to create data projects and to spark connections and conversations between strangers was inspiring.
+* Take account of the different personalities of your audience
+
+<h4>Nathalie Miebach</h4>
+* Data is a medium, what are the different ways you can treat and present it? What other senses can you evoke?
+* Work with the data and the medium simultaneously. Experiment around with both.
+* Invoke play first. Let them discover that it is data as they experience it. 
+
+
+<h4>Martha Rettig</h4>
+* What are the other modes of communication can you tap into? Is there a tangible physical solution as well? 
+* Choose mediums that would be most accessible to your audience and that would allow your audience to easily collect data. Make the process of collecting data rewarding and satisfying.
+* One to two weeks of data collection is a good amount to draw insights from without being too monotonous.
+
