Adjusted page layout

--- a/_posts/2020-06-06-project-5.md
+++ b/_posts/2020-06-06-project-5.md
@@ -4,8 +4,11 @@ layout: project
 week: 5
 written-date: TBA
 title: "Build: Based on Researching and Testing" 
+subhead: Transferring the experience informed by earlier prototyping into a high fidelity app.
+
 featured-image: 
 featured-image-alt: alternateeee
+
 
 ---
 
