--- a/_posts/2020-06-07-project-4.md
+++ b/_posts/2020-06-07-project-4.md
@@ -7,19 +7,48 @@ title: "Prototype: Testing & Workshops"
 featured-image: Week4_featImg.jpg
 featured-image-alt: alternateeee
 
+subhead: Conducting a series of workshops to determine the data experience, information to be collected, and how the data will be visualized.
+
 splash-image: Week4_featImg.jpg
 featured-image-caption:
 
 
 ---
 
-<h2>Framework</h2>
+<nav class="article-nav">
+  <ul class="sidebar-info">
+    <li><a class="scroll-link" href="#one" data-element-id="one">Section One</a></li>
+    <li><a class="scroll-link" href="#two" data-element-id="two">Section Two</a></li>
+    <li><a class="scroll-link" href="#three" data-element-id="three">Section Three</a></li>
+    <li><a class="scroll-link" href="#four" data-element-id="four">Section Four</a></li>
+      <li><a class="scroll-link" href="#five" data-element-id="five">Section 5</a></li>
+  </ul>
+</nav>
 
-The process of working with data draws many parallels with the design process. While data can make up the research subset of the design process, the process of collecting, analyzing and understanding data can be creatively generative too. I wanted to adopt this process into my project as a starting off point. I converted the data science process I had learned from a previous class into a framework statement. 
+<section id="one" class="section">
+  <h2>Section One</h2>
+</section>
+<section id="two" class="section">
+  <h2>Section Two</h2>
+</section>
+<section id="three" class="section">
+  <h2>Section Three</h2>
+</section>
+<section id="four" class="section">
+    <h2>Section Four</h2>
+</section>
+<section id="five" class="section">
+    <h2>Section 5</h2>
+</section>
 
-<br>
 
-<b>Data Framework</b>
+<h2 class="article">Framework</h2>
+
+<p>The process of working with data draws many parallels with the design process. While data can make up the research subset of the design process, the process of collecting, analyzing and understanding data can be creatively generative too. I wanted to adopt this process into my project as a starting off point. I converted the data science process I had learned from a previous class into a framework statement.</p>  
+
+
+
+<h3>Data Framework</h3>
 <div class="proj-white-box">
 
 <p>To discover more about [subject], <span class="italic-serif"> what do you want to know more about?</span></p>
@@ -36,33 +65,26 @@ The process of working with data draws many parallels with the design process. W
 
 <br>
 
-<b>Examples of the framework statement in action:</b>
-
-<br>
-
-To discover more about my mental health, I will track my mood using doodles for a week.
-
-<br>
-
-To discover more about friendships, I will track our communication using number of texts sent for a day.
-
-<br>
-To feel more in sync with myself and friends, I will track our lives using events and moods for a year.
-
-<br>
-This framework will help me ideate on how I wanted to approach my project—The project is aimed at helping people feel more connected to others while being physically apart, but what pieces of data would people most want to know about their friends and family? How would I present this data? How many variables or aspects should I be tracking to make the insights meaningful but at the same time accessible for my busy audience?
+<h3>Examples of the framework statement in action:</h3>
 
 
-<h2>Audience Role</h2>
 
-Another pertinent part of the experience to be considered is the role of my audience and how they would be experiencing the app. Here were the main roles I considered for my audience:
+<p>To discover more about my mental health, I will track my mood using doodles for a week.</p>
 
-<br>
+
+<p>To discover more about friendships, I will track our communication using number of texts sent for a day.</p>
+
+<p>To feel more in sync with myself and friends, I will track our lives using events and moods for a year.</p>
+
+<p>This framework will help me ideate on how I wanted to approach my project—The project is aimed at helping people feel more connected to others while being physically apart, but what pieces of data would people most want to know about their friends and family? How would I present this data? How many variables or aspects should I be tracking to make the insights meaningful but at the same time accessible for my busy audience?</p>
+
+
+<h2 class="article">Audience Role</h2>
+
+<p>Another pertinent part of the experience to be considered is the role of my audience and how they would be experiencing the app. Here were the main roles I considered for my audience:</p>
 
 <h3>🤖 Passive role</h3>
-The app would collect the information from the audiences’ phone usage and other internet of things devices. With the information collected, the app algorithms would automatically analyze the data and visually output a visualization and summary of that data. In this role, the user is passively discovering their habits. 
-
-<br>
+<p>The app would collect the information from the audiences’ phone usage and other internet of things devices. With the information collected, the app algorithms would automatically analyze the data and visually output a visualization and summary of that data. In this role, the user is passively discovering their habits. </p>
 
 Pros:
 * Least amount of work for the audience
@@ -75,9 +97,7 @@ Cons:
 * By limiting the factors / aspects to those that can be tracked by internet of things devices, the insights may be sterile and lacking a human quality to it
 
 <h3>🏃 Active Role</h3>
-An active role will have the audience manually input their own data. The data will be represented using the app’s predefined visual language. From the visualizations, the audience can draw their own conclusions, but brief summaries can also be offered by the app.
-
-<br>
+<p>An active role will have the audience manually input their own data. The data will be represented using the app’s predefined visual language. From the visualizations, the audience can draw their own conclusions, but brief summaries can also be offered by the app.</p>
 
 Pros:
 * Allows the audience to collect their own data. Gives them the control to decide what they will collect and will not collect. By doing so, they will be able to notice things on a higher level of awareness.
@@ -90,7 +110,7 @@ Cons:
 
 
 <h3>🧑‍🎨 Creative Role</h3>
-A creative role gives the audience the freedom to decide on what they want to track as it pertains to the subject and how they will represent it visually. It will heavily rely on the framework statement created to help anchor the audience.
+<p>A creative role gives the audience the freedom to decide on what they want to track as it pertains to the subject and how they will represent it visually. It will heavily rely on the framework statement created to help anchor the audience.</p>
 
 <br>
 Pros:
@@ -106,9 +126,8 @@ Cons:
 
 <a class="squiggle" href="https://viki.invisionapp.com/freehand/DP-Workshops-vql3somsJ" target="_blank" rel="noopener noreferrer">Go to Visualizing Data workshop ➡️</a>
 
-For the first week of prototyping, I created two preliminary ideas I had for the app using low fidelity prototype screens based on my framework statement and an understanding of my audience. I was not confident in either direction—one I felt was too wide in what it could track and the other was restrictive in a linear timeline. 
+<p>For the first week of prototyping, I created two preliminary ideas I had for the app using low fidelity prototype screens based on my framework statement and an understanding of my audience. I was not confident in either direction—one I felt was too wide in what it could track and the other was restrictive in a linear timeline. </p>
 
-<br>
 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-1-part1.jpg" alt="" width=600px height=200px />
 <figcaption>Part 1 of Workshop</figcaption>
@@ -118,14 +137,14 @@ The main focus for this week was a workshop done on a collaborative board aimed 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-1-part2.jpg" alt="" width=600px height=400px />
 <figcaption>Part 2 of Workshop</figcaption>
 
-The second part asked participants to create a visualization based on a predefined key. I also included a subjective variable—how they felt about their screen time— because it gave more of the story of their screen time. After participants finished their visualizations, I appreciated how you could draw comparisons between them thanks to the same rules they were following.
+<p>The second part asked participants to create a visualization based on a predefined key. I also included a subjective variable—how they felt about their screen time— because it gave more of the story of their screen time. After participants finished their visualizations, I appreciated how you could draw comparisons between them thanks to the same rules they were following.</p>
 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-1-part3.jpg" alt="" width=600px height=200px />
 <figcaption>Part 3 of Workshop</figcaption>
 
-For the third part, participants entered information about their screen times. There was not a visual aspect, but this part may reflect the collection part of the process. It was the least engaging, but it was straightforward in presenting the data. 
+<p>For the third part, participants entered information about their screen times. There was not a visual aspect, but this part may reflect the collection part of the process. It was the least engaging, but it was straightforward in presenting the data.</p>
 
-<h2>Workshop II: Viewing Data & Types of Info</h2>
+<h2 class="article">Workshop II: Viewing Data & Types of Info</h2>
 
 The two workshops for this week focused on (1) viewing data visualizations and (2) what information would be most pertinent to collect. 
 
@@ -135,14 +154,10 @@ The two workshops for this week focused on (1) viewing data visualizations and (
 
 <a class="squiggle" href="https://viki.invisionapp.com/prototype/DP-Prototype2-030921-ckm1f1wib00a51l01iulo16sq" target="_blank" rel="noopener noreferrer">See app prototype ➡️</a>
 
-<br>
-Based on my learnings from last week, I pivoted to tracking different moments of a person’s week. The types of moments included events, thoughts and news. Each moment was encapsulated by a circle. Each moment would have an attached importance (on a size scale) and time. These weekly moments are visualized on a board. I created a hypothetical version with content from Chrissy Teigan’s social media feed. I allowed participants to freely click around and discover the information and narratives on their own. 
+<p>Based on my learnings from last week, I pivoted to tracking different moments of a person’s week. The types of moments included events, thoughts and news. Each moment was encapsulated by a circle. Each moment would have an attached importance (on a size scale) and time. These weekly moments are visualized on a board. I created a hypothetical version with content from Chrissy Teigan’s social media feed. I allowed participants to freely click around and discover the information and narratives on their own.</p>
 
-<br>
+<p>Overall, participants seem to enjoy the experience. What it invoked was curiosity to learn more about each moment, especially ones that were visualized but details were not given. It could encourage participants to reach out to that person to ask about that moment! These are the exact connections I was aiming to create—a solution with the propensity to create those deeper connections.</p>
 
-Overall, participants seem to enjoy the experience. What it invoked was curiosity to learn more about each moment, especially ones that were visualized but details were not given. It could encourage participants to reach out to that person to ask about that moment! These are the exact connections I was aiming to create—a solution with the propensity to create those deeper connections. 
-
-<br>
 
 <h3>(2) Info Brainstorm Session</h3>
 
@@ -151,7 +166,7 @@ Overall, participants seem to enjoy the experience. What it invoked was curiosit
 
 <a class="squiggle" href="https://viki.invisionapp.com/freehand/DP-Workshop--2-March-10-U5Kikqn02" target="_blank" rel="noopener noreferrer">Go to Info Brainstorm Session ➡️</a>
 
-To help ideate what information would be most pertinent to collect, I held a brainstorming session. I included the information I used in this week’s prototype, but I also invited others to add what other info they would like to know.
+<p>To help ideate what information would be most pertinent to collect, I held a brainstorming session. I included the information I used in this week’s prototype, but I also invited others to add what other info they would like to know.</p>
 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-2B.jpg" alt="" width=600px height=700px />
 <figcaption>Brainstorming Results</figcaption>
