Added fixed scroll

--- a/_posts/2020-06-07-project-4.md
+++ b/_posts/2020-06-07-project-4.md
@@ -14,16 +14,19 @@ featured-image-caption:
 
 
 ---
-
+                
+                
 <nav class="article-nav">
   <ul class="sidebar-info">
-    <li><a class="scroll-link" href="#one" data-element-id="one">Section One</a></li>
+    <li><a class="scroll-link" href="#one" data-element-id="one">Section One sdfgsdfgsfd</a></li>
     <li><a class="scroll-link" href="#two" data-element-id="two">Section Two</a></li>
     <li><a class="scroll-link" href="#three" data-element-id="three">Section Three</a></li>
     <li><a class="scroll-link" href="#four" data-element-id="four">Section Four</a></li>
       <li><a class="scroll-link" href="#five" data-element-id="five">Section 5</a></li>
   </ul>
 </nav>
+
+<div class="article-content">
 
 <section id="one" class="section">
   <h2>Section One</h2>
@@ -170,3 +173,5 @@ The two workshops for this week focused on (1) viewing data visualizations and (
 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-2B.jpg" alt="" width=600px height=700px />
 <figcaption>Brainstorming Results</figcaption>
+
+</div>
