Adjusted side bar scroll

--- a/_posts/2020-06-07-project-4.md
+++ b/_posts/2020-06-07-project-4.md
@@ -18,34 +18,18 @@ featured-image-caption:
                 
 <nav class="article-nav">
   <ul class="sidebar-info">
-    <li><a class="scroll-link" href="#one" data-element-id="one">Section One sdfgsdfgsfd</a></li>
-    <li><a class="scroll-link" href="#two" data-element-id="two">Section Two</a></li>
-    <li><a class="scroll-link" href="#three" data-element-id="three">Section Three</a></li>
-    <li><a class="scroll-link" href="#four" data-element-id="four">Section Four</a></li>
-      <li><a class="scroll-link" href="#five" data-element-id="five">Section 5</a></li>
+    <li><a class="scroll-link" href="#one" data-element-id="one">Framework</a></li>
+    <li><a class="scroll-link" href="#two" data-element-id="two">Audience Role</a></li>
+    <li><a class="scroll-link" href="#three" data-element-id="three">Workshop I: Visualizing Data</a></li>
+    <li><a class="scroll-link" href="#four" data-element-id="four">Workshop 2: Viewing App Prototype</a></li>
+    <li><a class="scroll-link" href="#five" data-element-id="five">Workshop 3: Info Brainstorm Session</a></li>
   </ul>
 </nav>
 
 <div class="article-content">
 
 <section id="one" class="section">
-  <h2>Section One</h2>
-</section>
-<section id="two" class="section">
-  <h2>Section Two</h2>
-</section>
-<section id="three" class="section">
-  <h2>Section Three</h2>
-</section>
-<section id="four" class="section">
-    <h2>Section Four</h2>
-</section>
-<section id="five" class="section">
-    <h2>Section 5</h2>
-</section>
-
-
-<h2 class="article">Framework</h2>
+    <h2 class="article">Framework</h2>
 
 <p>The process of working with data draws many parallels with the design process. While data can make up the research subset of the design process, the process of collecting, analyzing and understanding data can be creatively generative too. I wanted to adopt this process into my project as a starting off point. I converted the data science process I had learned from a previous class into a framework statement.</p>  
 
@@ -81,23 +65,31 @@ featured-image-caption:
 
 <p>This framework will help me ideate on how I wanted to approach my project—The project is aimed at helping people feel more connected to others while being physically apart, but what pieces of data would people most want to know about their friends and family? How would I present this data? How many variables or aspects should I be tracking to make the insights meaningful but at the same time accessible for my busy audience?</p>
 
+</section>
 
-<h2 class="article">Audience Role</h2>
+<section id="two" class="section">
+  <h2 class="article">Audience Role</h2>
 
 <p>Another pertinent part of the experience to be considered is the role of my audience and how they would be experiencing the app. Here were the main roles I considered for my audience:</p>
 
 <h3>🤖 Passive role</h3>
 <p>The app would collect the information from the audiences’ phone usage and other internet of things devices. With the information collected, the app algorithms would automatically analyze the data and visually output a visualization and summary of that data. In this role, the user is passively discovering their habits. </p>
 
-Pros:
-* Least amount of work for the audience
-* Accessible in terms of ease of use, least time consuming
+<div class="side-by-side-change">
+    <section>
+        <b>Pros</b>
+        <p>Least amount of work for the audience</p>
+        <p>Accessible in terms of ease of use, least time consuming</p>
+    </section>
+    <section>
+        <b>Cons</b>
+        <p>May be least engaging</p>
+        <p>Audience may not fully understand what factors / aspects were taken in account when creating the visualizations or summary</p>
+        <p>By limiting the factors / aspects to those that can be tracked by internet of things devices, the insights may be sterile and lacking a human quality to it</p>
+    </section>
+</div>
+            
 
-<br>
-Cons:
-* May be least engaging
-* Audience may not fully understand what factors / aspects were taken in account when creating the visualizations or summary
-* By limiting the factors / aspects to those that can be tracked by internet of things devices, the insights may be sterile and lacking a human quality to it
 
 <h3>🏃 Active Role</h3>
 <p>An active role will have the audience manually input their own data. The data will be represented using the app’s predefined visual language. From the visualizations, the audience can draw their own conclusions, but brief summaries can also be offered by the app.</p>
@@ -125,7 +117,9 @@ Cons:
 * Requires the most work on the part of the audience
 * May not be ideal in the format of an app because it limits how data can be represented to digital forms
 
-<h2>Workshop I: Visualizing Data</h2>
+</section>
+<section id="three" class="section">
+  <h2>Workshop I: Visualizing Data</h2>
 
 <a class="squiggle" href="https://viki.invisionapp.com/freehand/DP-Workshops-vql3somsJ" target="_blank" rel="noopener noreferrer">Go to Visualizing Data workshop ➡️</a>
 
@@ -151,9 +145,11 @@ The main focus for this week was a workshop done on a collaborative board aimed 
 
 The two workshops for this week focused on (1) viewing data visualizations and (2) what information would be most pertinent to collect. 
 
-<br>
+</section>
 
-<h3>(1) Viewing Data App Prototype</h3>
+
+<section id="four" class="section">
+    <h2>Workshop 2: Viewing App Prototype</h2>
 
 <a class="squiggle" href="https://viki.invisionapp.com/prototype/DP-Prototype2-030921-ckm1f1wib00a51l01iulo16sq" target="_blank" rel="noopener noreferrer">See app prototype ➡️</a>
 
@@ -161,10 +157,14 @@ The two workshops for this week focused on (1) viewing data visualizations and (
 
 <p>Overall, participants seem to enjoy the experience. What it invoked was curiosity to learn more about each moment, especially ones that were visualized but details were not given. It could encourage participants to reach out to that person to ask about that moment! These are the exact connections I was aiming to create—a solution with the propensity to create those deeper connections.</p>
 
+</section>
 
-<h3>(2) Info Brainstorm Session</h3>
 
+<section id="five" class="section">
+    <h2>Workshop 3: Info Brainstorm Session</h2>
+    
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-2A.jpg" alt="" width=600px height=700px />
+
 <figcaption>Types of Information Brainstorm Session</figcaption>
 
 <a class="squiggle" href="https://viki.invisionapp.com/freehand/DP-Workshop--2-March-10-U5Kikqn02" target="_blank" rel="noopener noreferrer">Go to Info Brainstorm Session ➡️</a>
@@ -173,5 +173,11 @@ The two workshops for this week focused on (1) viewing data visualizations and (
 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-2B.jpg" alt="" width=600px height=700px />
 <figcaption>Brainstorming Results</figcaption>
+</section>
+
+
+
+
+
 
 </div>
