--- a/_posts/2021-02-02-project-1.md
+++ b/_posts/2021-02-02-project-1.md
@@ -91,7 +91,7 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
     <p class="artistStatement">The Happy Show</p>
 
-    <p class="artistBio">Kayla Rich is currently a communication design student at MassArt.</p>
+    <p class="artistBio">Description</p>
 
 
 </li>
@@ -102,7 +102,7 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
 <p class="artistStatement">Spotify Wrapped</p>
 
-    <p class="artistBio">Tony Pham is a MassArt communication design alumni.</p>
+    <p class="artistBio">Description</p>
 
 </li>
 
@@ -111,9 +111,9 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
     <img src="{{ site.baseurl }}/assets/images/Week1/DearNewYork.jpeg" alt=""/>
 
-    <p class="artistStatement">My work is based on the phrase “come hell or high water.” I worked a lot with the composition of the piece. It was interesting experimenting in both the letterpress and AR. With the AR, I edited the sounds myself with found sounds to add another layer of meaning.</p>
+    <p class="artistStatement">Description</p>
 
-    <p class="artistBio">Cara Tarmey is currently a communication design student at MassArt.</p>
+    <p class="artistBio">Description</p>
 
 </li>
 
