--- a/_posts/2020-06-07-project-4.md
+++ b/_posts/2020-06-07-project-4.md
@@ -79,19 +79,18 @@ featured-image-caption:
 <h3>🤖 Passive role</h3>
 <p>The app would collect the information from the audiences’ phone usage and other internet of things devices. With the information collected, the app algorithms would automatically analyze the data and visually output a visualization and summary of that data. In this role, the user is passively discovering their habits. </p>
 
-<div class="white-box two-columns">
-    <section>
-        <b>Pros</b>
-        <p>Least amount of work for the audience</p>
-        <p>Accessible in terms of ease of use, least time consuming</p>
-    </section>
-    <section>
-        <b>Cons</b>
-        <p>May be least engaging</p>
-        <p>Audience may not fully understand what factors / aspects were taken in account when creating the visualizations or summary</p>
-        <p>By limiting the factors / aspects to those that can be tracked by internet of things devices, the insights may be sterile and lacking a human quality to it</p>
-    </section>
-</div>
+<h4>Pros</h4>
+<ul>
+<li>Least amount of work for the audience</li>
+<li>Accessible in terms of ease of use, least time consuming</li>
+</ul>
+
+<h4>Cons</h4>
+<ul>
+<li>May be least engaging</li>
+<li>Audience may not fully understand what factors / aspects were taken in account when creating the visualizations or summary</li>
+<li>By limiting the factors / aspects to those that can be tracked by internet of things devices, the insights may be sterile and lacking a human quality to it</li>
+</ul>
             
 
 
@@ -138,7 +137,7 @@ featured-image-caption:
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-1-part1.jpg" alt=""/>
 <figcaption>Participants were asked to visualize their screen time data in any way they wanted to.</figcaption>
 
-The main focus for this week was a workshop done on a collaborative board aimed at the different ways people could interact with their own data (passive, active, or creative role). The data participants interacted with was their screen time—data they could easily access on their devices. In the first part, participants were asked to visualize their screen time however they wanted. The only exception was that they could not use a bar chart. The visualizations came out great and were distinct to each person—it was imbued with each person’s perspective and thinking, not just the objective numbers. 
+<p>The main focus for this week was a workshop done on a collaborative board aimed at the different ways people could interact with their own data (passive, active, or creative role). The data participants interacted with was their screen time—data they could easily access on their devices. In the first part, participants were asked to visualize their screen time however they wanted. The only exception was that they could not use a bar chart. The visualizations came out great and were distinct to each person—it was imbued with each person’s perspective and thinking, not just the objective numbers.</p>
 
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-1-part2.jpg" alt=""/>
 <figcaption>Participants were asked to visualize their screentime according to the visual key.</figcaption>
@@ -169,11 +168,12 @@ The main focus for this week was a workshop done on a collaborative board aimed 
 <section id="five" class="section">
     <h2 class="article">Workshop 3: Info Brainstorm Session</h2>
     
+<a class="squiggle" href="https://viki.invisionapp.com/freehand/DP-Workshop--2-March-10-U5Kikqn02" target="_blank" rel="noopener noreferrer">Go to Info Brainstorm Session ➡️</a>
+    
 <img src="{{ site.baseurl }}/assets/images/Week4/DPWorkshop-2A.jpg" alt=""/>
 
 <figcaption>Types of Information Brainstorm Session</figcaption>
 
-<a class="squiggle" href="https://viki.invisionapp.com/freehand/DP-Workshop--2-March-10-U5Kikqn02" target="_blank" rel="noopener noreferrer">Go to Info Brainstorm Session ➡️</a>
 
 <p>To help ideate what information would be most pertinent to collect, I held a brainstorming session. I included the information I used in this week’s prototype, but I also invited others to add what other info they would like to know.</p>
 
