--- a/_posts/2020-06-06-project-5.md
+++ b/_posts/2020-06-06-project-5.md
@@ -56,19 +56,125 @@ splash-image: Week5_featImg.jpg
 
 <section id="three" class="section">
     <h2 class="article">Low Fidelity Prototype</h2>
-<!--  Section 2: Slideshow w/ Individual Artists
+
+<!--  LF Slideshow 
+based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */-->
+
+
+<div class="lf-grid">
+
+<div>
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-1-home.jpg" height=350px alt=""/>
+    
+<p class="slide-description-center">Home page</p>
+        </div>
+
+<div>
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-2-board.jpg" height=350px alt=""/>
+    
+        <p class="slide-description-center">Your weekly board</p>
+
+</div>
+
+<div>
+ <img src="{{ site.baseurl }}/assets/images/Week5/lf-3-board-selected.jpg" height=350px alt=""/>
+    
+
+    <p class="slide-description-center">Selected moment on board</p>
+
+</div>
+<div>
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-4-board-summary.jpg" height=350px alt=""/>
+
+
+        <p class="slide-description-center">Your weekly board summary</p>
+</div>
+<div>
+    
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-5-my-circle.jpg" height=350px alt=""/>
+    
+
+        <p class="slide-description-center">My circles page</p>
+    
+</div>
+<div>
+    
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-6-week-shared.jpg" height=350px alt=""/>
+    
+
+        <p class="slide-description-center">My circle's collective weekly board</p>
+</div>
+<div>
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-7-create-moment.jpg" height=350px alt=""/>
+    
+    
+    
+        <p class="slide-description-center">Create a moment</p>
+        
+</div>
+<div>
+ 
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-8-custom-moment.jpg" height=350px alt=""/>
+    
+        <p class="slide-description-center">Customize the moment</p>
+        
+</div>
+<div>
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-9-profile.jpg" height=350px alt=""/>
+
+        <p class="slide-description-center">Your profile</p>
+</div>
+<div>
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-10-profile-report.jpg" height=350px alt=""/>
+    
+        <p class="slide-description-center">Your monthly reports</p>
+
+</div>
+<div>
+
+    <img src="{{ site.baseurl }}/assets/images/Week5/lf-11-feb-report.jpg" height=350px alt=""/>
+
+        <p class="slide-description-center">Your February Report</p>
+    
+</div>
+
+</div>
+
+
+    
+
+
+</section>
+
+<section id="four" class="section">
+    <h2 class="article">High Fidelity Prototype</h2>
+    <p>As I moved onto my high fidelity prototype, I took learnings from conducting the experience with my friends into account.</p>
+    <ul>
+        <li>Allow more than one mood for each moment</li>
+        <li>Include short descriptions for each moment</li>
+    </ul>
+    
+    
+<h3>Introducing In Sync the App</h3>
+    
+    <!--  HF Slideshow 
 based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */-->
 
 <div class="carousel">
-     <button class="carousel_button  carousel_button-left"><
-</button>
+     <button class="carousel_button  carousel_button-left"><</button>
 
 
 <div class="carousel_track-container">
     <ul class="carousel_track">
 
 <li class="carousel_slide currentSlide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-1-home.jpg" height=350px alt=""/>
+    <img src="{{ site.baseurl }}/assets/images/Week5/1-Opener.gif" height=350px alt=""/>
     
     <div>
         <p class="slide-description-center">Home page</p>
@@ -79,7 +185,7 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
 
 <li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-2-board.jpg" height=350px alt=""/>
+    <img src="{{ site.baseurl }}/assets/images/Week5/2-Set-status.gif" height=350px alt=""/>
     
     <div>
         <p class="slide-description-center">Your weekly board</p>
@@ -89,7 +195,7 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
 
 <li class="carousel_slide">
- <img src="{{ site.baseurl }}/assets/images/Week5/lf-3-board-selected.jpg" height=350px alt=""/>
+ <img src="{{ site.baseurl }}/assets/images/Week5/3-Your-board-viz.gif" height=350px alt=""/>
     
     <div>
 
@@ -100,7 +206,7 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 </li>
 
 <li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-4-board-summary.jpg" height=350px alt=""/>
+    <img src="{{ site.baseurl }}/assets/images/Week5/4-Your-board-sum.gif" height=350px alt=""/>
     
     <div>
 
@@ -111,10 +217,10 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 </li>
 
 <li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-5-my-circle.jpg" height=350px alt=""/>
+    <img src="{{ site.baseurl }}/assets/images/Week5/5-Group-board-withTouch.gif" height=350px alt=""/>
     
     <div>
-        <p class="slide-description-center">My circles page</p>
+        <p class="slide-description-center">My circles page and collective group board</p>
     
     </div>
 
@@ -122,22 +228,22 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
 
 <li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-6-week-shared.jpg" height=350px alt=""/>
+    <img src="{{ site.baseurl }}/assets/images/Week5/6-Create-moment.gif" height=350px alt=""/>
     
     <div>
 
-        <p class="slide-description-center">My circle's collective weekly board</p>
+        <p class="slide-description-center">Creating a moment</p>
     
     </div>
 
 </li>
 
 <li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-7-create-moment.jpg" height=350px alt=""/>
+    <img src="{{ site.baseurl }}/assets/images/Week5/7-Profile.gif" height=350px alt=""/>
     
     <div>
     
-        <p class="slide-description-center">Create a moment</p>
+        <p class="slide-description-center">Your profile page with weekly boards and highlights</p>
     
     </div>
 
@@ -154,39 +260,6 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
 
 </li>
 
-<li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-9-profile.jpg" height=350px alt=""/>
-    
-    <div>
-        <p class="slide-description-center">Your profile</p>
-    
-    </div>
-
-</li>
-
-<li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-10-profile-report.jpg" height=350px alt=""/>
-    
-    <div>
-
-        <p class="slide-description-center">Your monthly reports</p>
-    
-    </div>
-
-</li>
-
-<li class="carousel_slide">
-    <img src="{{ site.baseurl }}/assets/images/Week5/lf-11-feb-report.jpg" height=350px alt=""/>
-    
-    <div>
-
-        <p class="slide-description-center">Your February Report</p>
-    
-    </div>
-
-</li>
-
-
 </ul>
 
 </div>
@@ -200,28 +273,14 @@ based on Kevin Powell's tutorial: https://www.youtube.com/watch?v=VYsVOamdB0g */
     <button class="carousel_indicator"></button>
     <button class="carousel_indicator"></button>
     <button class="carousel_indicator"></button>
-     <button class="carousel_indicator"></button>
-    <button class="carousel_indicator"></button>
-    <button class="carousel_indicator"></button>
+</div>
+
+<button class="carousel_button carousel_button-right">></button>
 
 </div>
 
-<button class="carousel_button carousel_button-right">>
-</button>
 
-</div>
-    
-</section>
 
-<section id="four" class="section">
-    <h2 class="article">High Fidelity Prototype</h2>
-    <p>As I moved onto my high fidelity prototype, I took learnings from conducting the experience with my friends into account.</p>
-    <ul>
-        <li>Allow more than one mood for each moment</li>
-        <li>Include short descriptions for each moment</li>
-    </ul>
-    
-    <h3>Introducing In Sync the App</h3>
     <p>In Sync is the app version of the experience I prototyped with my circle, except a lot more streamlined thanks to its technological capabilities. It will allow individuals to log their visualized moments onto their weekly boards. They can view their friends' boards throughout the week and create group boards where their moments are compiled. These group boards hope to give an overall sense of how your circles' week have been going collectively. The app will keep a record of your weekly boards as well as pulling up highlighted moments for each month.</p>
     
     <h3>Why In Sync? And not Data Bonds?</h3>
